--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="./assets/css/menu.css" rel="stylesheet">
     <link href="./assets/css/main.css" rel="stylesheet">
     <link href="./assets/css/submenu.css" rel="stylesheet">
-    <link href="./assets/css/prodruto.css" rel="stylesheet">
+    <link href="./assets/css/produto.css" rel="stylesheet">
 </head>
 <body class="app">
     <header class="cabecalho">
@@ -46,7 +46,11 @@
         <div id="banner3"> 
             <span id=titulo>
                 Intel nos Jogos Olimpicos  </br> 
-                 <p id="text">Interação e conectividades nos Jogos Olimpicos 2020.</p>
+                 <p id="text">
+                 Interação e conectividades nos Jogos Olimpicos 2020.
+                 Os Jogos de 2020 serão a segunda edição de três edições consecutivas no Extremo Oriente, 
+                 seguindo os Jogos Olímpicos de Inverno de 2018 em Pyeongchang.  
+                 </p>
             </span>
         </div>
     </div>
