--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link href="./assets/css/menu.css" rel="stylesheet">
     <link href="./assets/css/main.css" rel="stylesheet">
     <link href="./assets/css/submenu.css" rel="stylesheet">
+    <link href="./assets/css/responsive.css" rel="stylesheet">
     <link href="./assets/css/produto.css" rel="stylesheet">
+    
+</head>
 </head>
 <body class="app">
     <header class="cabecalho">
@@ -48,8 +51,7 @@
                 Intel nos Jogos Olimpicos  </br> 
                  <p id="text">
                  Interação e conectividades nos Jogos Olimpicos 2020.
-                 Os Jogos de 2020 serão a segunda edição de três edições consecutivas no Extremo Oriente, 
-                 seguindo os Jogos Olímpicos de Inverno de 2018 em Pyeongchang.  
+                 Os Jogos de 2020 serão a segunda edição de três edições consecutivas no Extremo Oriente.  
                  </p>
             </span>
         </div>
