alterando menu responsivo

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <link href="./assets/css/submenu.css" rel="stylesheet">
     <link href="./assets/css/responsive.css" rel="stylesheet">
     <link href="./assets/css/produto.css" rel="stylesheet">
-    
 </head>
 </head>
 <body class="app">
     <header class="cabecalho">
+        <input type="checkbox" id="bt-menu">
+        <label for="bt-menu"> &#9776; </label>
         <nav class="menu">
             <ul class="menu__lista">
                 <li class="menu__item">
@@ -38,8 +39,9 @@
                     </div>
                 </li>
             </ul>
-        </nav>
+        </nav>    
     </header>
+    
     <main class="conteudo">
     <div class="banners">
         <div id="banner1"> 
